# doubles

./: Makefile.am  Makefile.in  TODO.txt  acinclude.m4  compiling.txt  configure  configure.in  dbl.cpp  dbl.h  dialog1.h  dialog3_list.cpp  dialog3_list.h  dialog3_tree.cpp  dllexport.h  dllmain.cpp  dupf.cpp  dupfgui.cpp  file.cpp  history.txt  makefile.all  makefile.bcc  makefile.gcc  makefile.vc  makefile.wat  os_cc_specific.cpp  os_cc_specific_gui.cpp  rsrc.rc  treectrl.h
Installer/: GetWindowsVersion.nsh  dupfinder.nsi
branches/dupfinder-0.8/: dbl.h  dialog2.cpp  dialog3_list.h  dialog3_tree.cpp  dialog3_tree.h  dupf.cpp  file.cpp  file.h  filetest.h  history.txt  makeall.sh  makefile.bcc  makefile.gcc  makefile.vc  minmax.h  resource.h  stdinc.h  treectrl.cpp
branches/dupfinder-0.8-old/: configure.in  dbl.cpp  dialog1.cpp  dllexport.h  dupf.h  file.h  largeint.h  makeall.sh  makefile.all  makefile.unix  makefile.wat  profile.h  readme.txt  stdinc.h  wxverchk.h
branches/dupfinder-0.8-old/Installer/: dupfinder.nsi
branches/dupfinder-0.8/Installer/: dupfinder.nsi
dupfinder/: Makefile.am  TODO.txt  buildunix.sh  configure  configure.in  dbl.cpp  dbl.h  dialog1.cpp  dialog1.h  dialog2.cpp  dialog2.h  dialog3.cpp  dialog3.h  dialog3_list.cpp  dialog3_list.h  dialog3_tree.cpp  dialog3_tree.h  dllexport.h  dupf.cpp  dupf.h  dupfgui.cpp  dupfgui.h  file.cpp  file.h  filetest.cpp  filetest.h  history.txt  largeint.h  makeall.sh  makefile  makefile.all  makefile.bcc  makefile.gcc  makefile.unix  makefile.vc  makefile.wat  minmax.h  os_cc_specific.cpp  os_cc_specific.h  os_cc_specific_gui.cpp  (+10 more)
dupfinder/Installer/: GetWindowsVersion.nsh  dupfinder.nsi
tags/DupFinder-0_30/dupfinder/: TODO.txt  dbl.h  dialog1.cpp  os_cc_specific_includes.h
tags/DupFinder-0_36/dupfinder/: makefile.vc  os_cc_specific.cpp  stdinc.h
tags/DupFinder-0_36_unix/dupfinder/: dialog2.cpp  dupf.cpp  dupf.h  file.h  os_cc_specific_includes.h  readme.txt
tags/DupFinder-0_40/dupfinder/: configure.in  dbl.cpp  dialog2.cpp  dialog2.h  dialog3_tree.cpp
tags/DupFinder-0_41-winonly/dupfinder/: configure  dialog1.cpp  dialog3_tree.cpp  history.txt
tags/DupFinder-0_41-winonly/dupfinder/Installer/: dupfinder.nsi
tags/DupFinder-0_42/dupfinder/: dialog1.cpp  dialog3_tree.cpp
tags/DupFinder-0_43/dupfinder/: TODO.txt  dialog1.h  dialog3_tree.cpp  file.cpp  history.txt  os_cc_specific.h
tags/DupFinder-0_44/dupfinder/: TODO.txt  dbl.cpp  dialog1.cpp  dialog3_list.h  file.h  history.txt
tags/DupFinder-with_out_unix_unicode/dupfinder/: TODO.txt  dialog3_tree.cpp  dialog3_tree.h  makefile.gcc
tags/DupFinder-without-treectrl/dupfinder/: dbl.cpp  dialog3_tree.cpp  makefile.wat
tags/Last-DupFinder-with-treectrl/dupfinder/: TODO.txt  history.txt  makefile.unix  os_cc_specific.cpp
tags/doubles-0_91_4-last-version-without-wxWidgets/dupfinder/: makefile.bcc  makefile.gcc  readme.txt
tags/doubles-0_91_5/dupfinder/: makefile.unix  os_cc_specific.cpp  os_cc_specific_includes.h  readme.txt
tags/doubles-0_91_6/dupfinder/: makefile.unix  stdinc.cpp
tags/doubles-0_91_7/dupfinder/: makefile.gcc  readme.txt  stdinc.h
tags/doubles-0_91_8/dupfinder/: dbl.cpp  makefile.gcc  makefile.vc  os_cc_specific.cpp  os_cc_specific.h  os_cc_specific_includes.h  profile.h  readme.txt
tags/doubles-alpha-0_9-first-release/dupfinder/: dbl.cpp  os_cc_specific.cpp  os_cc_specific.h  os_cc_specific_includes.h  readme.txt  stdinc.cpp  ulargeint.h
tags/doubles-alpha-0_91-bugfix/dupfinder/: dbl.cpp  makefile  readme.txt
tags/doubles-alpha-0_91_2-unicode-support/dupfinder/: buildunix.sh  os_cc_specific.cpp  os_cc_specific.h  readme.txt  stdinc.h
tags/doubles-alpha-0_91_3/dupfinder/: largeint.h  makefile  os_cc_specific.h
tags/doubles-alpha-0_91_4/dupfinder/: buildunix.sh  dbl.h  largeint.h  os_cc_specific_includes.h
tags/dupfinder-0_92/dupfinder/: TODO.txt  dbl.cpp  dbl.h  readme.txt  stdinc.h
tags/dupfinder-before-changes-1/dupfinder/: largeint.h  makefile.gcc  readme.txt
tags/dupfinder-gui-0_10-release/dupfinder/: dialog1.cpp
tags/dupfinder-gui-0_11-con-0_92/dupfinder/: TODO.txt  dialog1.cpp  dialog1.h  dialog2.cpp  dialog3_tree.cpp  dialog3_tree.h  dupfgui.h  makefile.bcc  makefile.unix  makefile.vc  stdinc.cpp  ulargeint.h
tags/dupfinder-gui-0_20-con-0_92/dupfinder/: dbl.cpp  dialog1.h  dialog2.cpp  dialog3_tree.h  makefile.gcc  makefile.vc
tags/dupfinder_gui-0_10/dupfinder/: dbl.cpp  dialog1.cpp  dialog3_tree.h  makefile.bcc  makefile.gcc  makefile.unix  makefile.vc  os_cc_specific.cpp  os_cc_specific.h  profile.h  readme.txt
tags/stable-1_0/dupfinder/: makefile  profile.h
tags/tag-20080217-14_06/dupfinder/: TODO.txt  dbl.h  dialog2.h  dialog3_tree.cpp  dupf.cpp  history.txt  makefile.unix
trunk/dupfinder/: TODO.txt  buildunix.sh  compiling.txt  configure.in  dbl.cpp  dbl.h  dialog1.cpp  dialog1.h  dialog2.cpp  dialog2.h  dialog3.cpp  dialog3_list.cpp  dialog3_list.h  dialog3_tree.cpp  dialog3_tree.h  dllexport.h  dllmain.cpp  dupf.cpp  dupf.h  dupfgui.cpp  dupfgui.h  file.cpp  file.h  filetest.cpp  filetest.h  history.txt  largeint.h  makefile  makefile.bcc  makefile.gcc  makefile.unix  makefile.vc  minmax.h  os_cc_specific.cpp  os_cc_specific.h  os_cc_specific_gui.cpp  os_cc_specific_gui.h  os_cc_specific_includes.h  profile.h  readme.txt  (+4 more)
trunk/dupfinder/Installer/: dupfinder.nsi
trunk/web/: history.txt  index.htm  style.css
web/: history.txt  index.htm  style.css
