
AC_PREREQ(2.59)

AC_INIT([dupfgui], [0.30] [ma_boehm@users.sourceforge.net])

AM_INIT_AUTOMAKE([1.9 foreign])

AC_PROG_CXX

AM_OPTIONS_WXCONFIG
# version number correct?
AM_PATH_WXCONFIG(2.6.0, wxWin=1, wxWin=0, , --static --debug)

if test "$wxWin" != 1; then
	AC_MSG_ERROR([
	You're wxWidgets version doesn't fit: You have to have
	at least 2.6.0, and a static debug version installed!\
	])
fi



AC_CONFIG_FILES([Makefile])
AC_OUTPUT