
AC_PREREQ(2.59)

AC_INIT([dupfgui], [0.30] [ma_boehm@users.sourceforge.net])

AM_INIT_AUTOMAKE([1.9 foreign])

AC_PROG_CXX

AM_OPTIONS_WXCONFIG
# version number correct?
AM_PATH_WXCONFIG(2.6.0, wxWin=1, wxWin=0, , --static --debug)

if test "$wxWin" != 1; then
	AC_MSG_ERROR([
	wxWidgets must be installed on your system
	but wx-config script couldn't be found.
	Please check that wx-config is in path, the directory
	where wxWidgets libraries are installed (returned by
	'wx-config --libs' command) is in LD_LIBRARY_PATH or
	equivalent variable and wxWidgets version is 2.3.4 or above.
	])
fi



AC_CONFIG_FILES([Makefile])
AC_OUTPUT